fixed grc files

--- a/grc/bluetooth_multi_sniffer.block.yml
+++ b/grc/bluetooth_multi_sniffer.block.yml
@@ -20,7 +20,7 @@ parameters:
 -   id: tun
     label: TUN Interface 
     dtype: bool
-    default: 'false'
+    default: False
 
 inputs:
 -   domain: stream
