--- a/grc/bluetooth_multi_hopper.block.yml
+++ b/grc/bluetooth_multi_hopper.block.yml
@@ -23,11 +23,11 @@ parameters:
 -   id: aliased
     label: Aliased
     dtype: bool
-    default: 'false'
+    default: False
 -   id: tun
     label: TUN Interface
     dtype: bool
-    default: 'false'
+    default: False
 
 inputs:
 -   domain: stream
