added single_sniffer adapted to sparsdr, which works without filters

--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -18,11 +18,10 @@
 # Boston, MA 02110-1301, USA.
 
 install(FILES
-    #bluetooth_multi_block.block.yml
     bluetooth_multi_hopper.block.yml
     bluetooth_multi_LAP.block.yml
+    bluetooth_no_filter_sniffer.block.yml
+    bluetooth_single_sniffer.block.yml
     bluetooth_multi_sniffer.block.yml
-    #bluetooth_packet.block.yml
-    #bluetooth_piconet.block.yml
     bluetooth_multi_UAP.block.yml DESTINATION share/gnuradio/grc/blocks
 )
