--- a/include/gr_bluetooth/CMakeLists.txt
+++ b/include/gr_bluetooth/CMakeLists.txt
@@ -27,6 +27,8 @@ install(FILES
     multi_LAP.h
     multi_sniffer.h
     multi_UAP.h
+    no_filter_sniffer.h
+    single_sniffer.h
     packet.h
     piconet.h DESTINATION include/gr_bluetooth
 )
