--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -31,6 +31,8 @@ list(APPEND bluetooth_sources
     multi_LAP_impl.cc
     multi_sniffer_impl.cc
     multi_UAP_impl.cc
+    no_filter_sniffer_impl.cc
+    single_sniffer_impl.cc
     packet_impl.cc
     piconet_impl.cc
 )
@@ -49,6 +51,8 @@ target_link_libraries(gnuradio-bluetooth gnuradio::gnuradio-runtime
   gnuradio::gnuradio-blocks
   gnuradio::gnuradio-filter
   gnuradio::gnuradio-fft
+  gnuradio::gnuradio-analog
+  gnuradio::gnuradio-digital
   Python::Python
   )
 target_include_directories(gnuradio-bluetooth
