Added two other decoder types, which may not compile yet

--- a/include/gr_bluetooth/CMakeLists.txt
+++ b/include/gr_bluetooth/CMakeLists.txt
@@ -27,7 +27,11 @@ install(FILES
     multi_LAP.h
     multi_sniffer.h
     multi_UAP.h
+    nishant_multi_block.h
+    nishant_multi_sniffer.h
     no_filter_sniffer.h
+    single_block.h
+    single_multi_sniffer.h
     single_sniffer.h
     packet.h
     piconet.h DESTINATION include/gr_bluetooth
