--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -31,10 +31,14 @@ list(APPEND bluetooth_sources
     multi_LAP_impl.cc
     multi_sniffer_impl.cc
     multi_UAP_impl.cc
+    nishant_multi_block.cc
+    nishant_multi_sniffer_impl.cc
     no_filter_sniffer_impl.cc
     single_sniffer_impl.cc
     packet_impl.cc
     piconet_impl.cc
+    single_block.cc
+    single_multi_sniffer_impl.cc
 )
 
 set(bluetooth_sources "${bluetooth_sources}" PARENT_SCOPE)
@@ -75,4 +79,3 @@ install(TARGETS gnuradio-bluetooth
     ARCHIVE DESTINATION lib${LIB_SUFFIX} # .lib file
     RUNTIME DESTINATION bin              # .dll file
 )
-
