Added more files

--- a/include/gr_bluetooth/CMakeLists.txt
+++ b/include/gr_bluetooth/CMakeLists.txt
@@ -29,6 +29,7 @@ install(FILES
     multi_UAP.h
     nishant_multi_block.h
     nishant_multi_sniffer.h
+    nishant_packet.h
     no_filter_sniffer.h
     single_block.h
     single_multi_sniffer.h
