--- a/grc/CMakeLists.txt
+++ b/grc/CMakeLists.txt
@@ -18,9 +18,5 @@
 # Boston, MA 02110-1301, USA.
 
 install(FILES
-    bluetooth_multi_hopper.block.yml
-    bluetooth_multi_LAP.block.yml
-    bluetooth_no_filter_sniffer.block.yml
-    bluetooth_multi_sniffer.block.yml
-    bluetooth_multi_UAP.block.yml DESTINATION share/gnuradio/grc/blocks
+    DESTINATION share/gnuradio/grc/blocks
 )
